--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -2,25 +2,14 @@
   &__title {
     margin-bottom: 20px;
 
-    font-family: "IBM Plex Sans", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 21px;
-
-    color: $c-main-black;
+    @include contacts-text;
   }
 
   &__link {
     display: block;
-    font-family: "IBM Plex Sans", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 21px;
+
+    @include contacts-text;
 
     text-decoration: none;
-
-    color: $c-main-black;
   }
 }
