--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -1,13 +1,8 @@
 .current-events {
-
   &__title {
     margin-bottom: 40px;
 
-    font-family: "Montserrat", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 36px;
+    @include section-title-text;
 
     text-align: center;
 
@@ -15,9 +10,6 @@
 
     @include onTablet {
       margin-bottom: 48px;
-
-      font-size: 48px;
-      line-height: 48px;
 
       text-align: left;
     }
