--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,4 +1,8 @@
 .event {
+  @include hover(transform, scale(105%));
+
+  cursor: pointer;
+
   &__photo-container {
     margin-bottom: 20px;
 
@@ -46,14 +50,15 @@
 
     &::after {
       content: url(../images/square.svg);
-      width: 10px;
-      height: 10px;
+
+      @include square(10px);
+
       margin-left: 8px;
       margin-bottom: 4px;
 
       @include onTablet {
-        width: 15px;
-        height: 15px;
+        @include square(15px);
+
         margin-bottom: 10px;
       }
     }
