--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -36,11 +36,10 @@
 
   &__return {
     display: block;
-    width: 50px;
-    height: 50px;
     margin: 0 0 20px 80px;
 
-    border-radius: 50%;
+    @include circle(50px);
+
     border: 1px solid $c-green;
 
     background-image: url(../images/return-arrow.svg);
