--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -27,8 +27,8 @@
   }
 
   &--cross {
-    width: 14px;
-    height: 14px;
+    @include square(14px);
+
     background-image: url(../images/cross.svg);
   }
 
@@ -39,8 +39,8 @@
   }
 
   &--instagram {
-    width: 24px;
-    height: 24px;
+    @include square(24px);
+
     background-image: url(../images/instagram.svg);
   }
 }
