--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -29,6 +29,10 @@
     height: 140px;
     padding: 20px 0;
 
+    @include hover(transform, scale(105%) translateY(-40%));
+
+    cursor: pointer;
+
     transform: translateY(-40%);
 
     background: $c-white;
