--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -1,4 +1,6 @@
 .logo {
+  height: 60px;
+
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -12,6 +14,8 @@
   color: $c-main-black;
 
   @include onTablet {
+    height: 72px;
+    
     font-size: 36px;
     line-height: 36px;
   }
