--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,6 +7,10 @@
     @include onTablet {
       display: flex;
       flex-direction: row;
+      justify-content: space-between;
+    }
+
+    @include onDesktop {
       justify-content: space-evenly;
     }
   }
@@ -27,7 +31,7 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 16px;
-    
+
     color: $c-white;
 
     @include onTablet {
@@ -36,18 +40,17 @@
   }
 
   &__line {
-    margin-bottom: 24px;
     width: 280px;
     height: 1px;
+    margin-bottom: 24px;
 
     background-color: rgba(255, 255, 255, 0.5);
 
     @include onTablet {
-      margin-bottom: 0;
       align-self: center;
-      width: 145px;
-
-      transform: rotate(-90deg);
+      width: 1px;
+      height: 145px;
+      margin-bottom: 0;
     }
   }
 
