--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -17,6 +17,19 @@
   }
 }
 
+@mixin section-title-text {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 36px;
+
+  @include onTablet {
+    font-size: 48px;
+    line-height: 48px;
+  }
+}
+
 @mixin event-text-type {
   font-family: "IBM Plex Sans", sans-serif;
   font-style: normal;
@@ -60,4 +73,41 @@
     font-size: 36px;
     line-height: 36px;
   }
+}
+
+@mixin subscription-main-text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 27px;
+
+  text-align: center;
+
+  color: $c-white;
+
+  @include onTablet {
+    line-height: 18px;
+  }
+}
+
+@mixin contacts-text {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+
+  color: $c-main-black;
+}
+
+@mixin square($_size) {
+  width: $_size;
+  height: $_size;
+}
+
+@mixin circle($_size) {
+  width: $_size;
+  height: $_size;
+  border-radius: 50%;
 }
