--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -2,11 +2,7 @@
   &__title {
     margin-bottom: 40px;
 
-    font-family: "Montserrat", sans-serif;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 36px;
+    @include section-title-text;
 
     text-align: center;
 
@@ -14,9 +10,6 @@
 
     @include onTablet {
       margin-bottom: 48px;
-
-      font-size: 48px;
-      line-height: 48px;
 
       text-align: left;
     }
@@ -28,19 +21,20 @@
 
   &__slider {
     display: flex;
+    width: 280px;
+    margin: 0 auto 20px;
+
     overflow-x: scroll;
     scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
-    margin-left: 20px;
-    margin-bottom: 20px;
 
     &::-webkit-scrollbar {
       display: none;
     }
 
     @include onTablet {
-      margin-left: 39px;
-      margin-bottom: 32px;
+      width: 690px;
+      margin: 0 auto 32px;
     }
 
     @include onDesktop {
@@ -51,12 +45,18 @@
   &__slide {
     margin-right: 16px;
 
+    scroll-snap-align: start;
+
     &:last-child {
-      margin-right: 0;
+      margin-right: 20px;
     }
 
     @include onTablet {
       margin-right: 20px;
+
+      &:last-child {
+        margin-right: 39px;
+      }
     }
   }
 
@@ -75,6 +75,10 @@
     @include onDesktop {
       width: 100%;
       height: 100%;
+
+      @include hover(transform, scale(105%));
+
+      cursor: pointer;
     }
   }
 
@@ -89,10 +93,8 @@
   }
 
   &__dot {
-    width: 9px;
-    height: 9px;
+    @include circle(9px);
 
-    border-radius: 50%;
     background-color: #e0e0e0;
 
     &:first-child {
@@ -100,6 +102,10 @@
     }
 
     &:active {
+      background-color: $c-green;
+    }
+
+    &:focus-visible {
       background-color: $c-green;
     }
   }
