first solution museum

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
-$c-gray: #eee;
+$btn-header-sise: 50px;
+$btn-header-sise-tablet: 70px;
+$size-font-title-s: 36px;
+$size-font-title-m: 48px;
+$size-font-paragraph-s: 16px;
+$size-font-paragraph-m: 14px;
+$transition-speed: 300ms;
+$c-active: #1a5a4c;
+$c-orange: #f14a27;
+$c-text-paragraph: #4e4e4e;
+$c-text-title: #0f0e08;
+$c-text-events: #687480;
+$c-text-title-active: #fff;
