--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,17 @@
-@import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./utils/vars";
+@import "./utils/mixins";
+@import "./utils/reset";
+@import "./blocks/page.scss";
+@import "./blocks/container.scss";
+@import "./blocks/header.scss";
+@import "./blocks/header-top.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/timetable.scss";
+@import "./blocks/grid.scss";
+@import "./blocks/events.scss";
+@import "./blocks/lecture.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/swiper.scss";
+@import "./blocks/subscription.scss";
+@import "./blocks/footer.scss";
