second solution museum

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,7 +5,7 @@ $size-font-title-m: 48px;
 $size-font-paragraph-s: 16px;
 $size-font-paragraph-m: 14px;
 $transition-speed: 300ms;
-$c-active: #1a5a4c;
+$c-active: rgb(26, 90, 76);
 $c-orange: #f14a27;
 $c-text-paragraph: #4e4e4e;
 $c-text-title: #0f0e08;
