--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -96,9 +96,8 @@
       content: "";
       width: 100%;
       height: 100%;
-      background-color: $c-active;
+      background-color: rgba(26, 90, 76, 0.5);
       left: -100%;
-      opacity: 50%;
       transition: $transition-speed;
       z-index: -1;
     }
