third solution museum

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -103,7 +103,7 @@
     }
 
     &::after {
-      opacity: 1;
+      background-color: rgba(26, 90, 76, 1);
       transition-delay: 150ms;
     }
 
