six solution museum

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -4,6 +4,14 @@
     display: none;
   }
 
+  &__image {
+    transition: transform $transition-speed;
+
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+
   &__title {
     font-family: "Montserrat", sans-serif;
     font-weight: 700;
