--- a/src/styles/blocks/swiper.scss
+++ b/src/styles/blocks/swiper.scss
@@ -31,6 +31,11 @@
       height: 100%;
       object-fit: cover;
       object-position: center;
+      transition: transform $transition-speed;
+
+      &:hover {
+        transform: scale(1.04);
+      }
     }
   }
 
