--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,7 @@
-$c-gray: #eee;
+$c-gray: #e5e5e5;
+$fontTitles: "Montserrat", sans-serif;
+$colorOrange: #f14a27;
+$colorGreen: #1a5a4c;
+$colorDark: #0f0e08;
+$iconWidth: 18px;
+$logoWidth: 61px;
