--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,52 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablet() {
+  @media (min-width: 768px) {
+    @content;
+  }
+}
+
+@mixin onNotebook() {
+  @media (min-width: 1280px) {
+    @content;
+  }
+}
+
+@mixin onDesign() {
+  @media (min-width: 1600px) {
+    @content;
+  }
+}
+
+@mixin onLargeScreens() {
+  @media (min-width: 2560px) {
+    @content;
+  }
+}
+
+// @mixin top-actions {
+//   display: grid;
+//   grid-template-columns: $logoWidth $iconWidth 1fr;
+//   justify-items: self-end;
+//   align-items: center;
+//   gap: 35px;
+
+//   @include onNotebook() {
+//     grid-template-columns: 45px max-content max-content;
+//     justify-content: space-between;
+//     align-items: center;
+//   }
+// }
+
+// @mixin border {
+//   display: block;
+//   box-sizing: border-box;
+//   width: 108.98px;
+//   height: 43.9px;
+
+//   background: $colorBlue;
+//   border-radius: 12px;
+//   margin: 0 auto;
+// }
