changed the path to logo

--- a/src/styles/blocks/logo.scss
+++ b/src/styles/blocks/logo.scss
@@ -5,8 +5,8 @@
   height: 61px;
   margin: 0 auto;
   background-color: #000;
-  -webkit-mask: url("../images/NA\ MU.svg") no-repeat 50% 50%;
-  mask: url("../images/NA\ MU.svg") no-repeat 50% 50%;
+  -webkit-mask: url("../images/NA MU.svg") no-repeat 50% 50%;
+  mask: url("../images/NA MU.svg") no-repeat 50% 50%;
   transition: all 0.3s;
 
   @include onTablet {
