add gray background-color

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -71,6 +71,11 @@
 
       &:hover {
         color: $colorOrange;
+        text-shadow: 0 10px 15px #531408;
+      }
+  
+      &:active {
+        text-shadow: -5px -5px 5px #531408;
       }
     }
   }
