--- a/src/styles/blocks/form-field.scss
+++ b/src/styles/blocks/form-field.scss
@@ -43,6 +43,7 @@
     flex-shrink: 0;
     background-color: $colorGreen;
     border: 1px solid $colorGreen;
+    cursor: pointer;
 
     transition: all 0.3s;
 
