--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,7 @@
 .header {
   position: relative;
   margin-bottom: 70px;
+  box-sizing: border-box;
 
   @include onTablet {
     margin-bottom: 88px;
@@ -16,8 +17,8 @@
 
     background-image: url("../images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv.png");
     background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-position: top;
+    background-size:cover;
     z-index: -1;
 
     height: 300px;
@@ -32,7 +33,7 @@
 
     @include onNotebook {
       height: 655px;
-      left: 43.4%;
+      left: 48%;
     }
   }
 
@@ -48,7 +49,7 @@
     }
 
     @include onNotebook {
-      padding: 15px 58px 119px;
+      padding: 15px 55px 119px;
       margin: 0 auto;
     }
   }
