--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,7 +1,7 @@
 .icon {
   position: relative;
   display: block;
-  min-width: $iconWidth;
+  width: $iconWidth;
   height: $iconWidth;
 
   background-size: contain;
@@ -15,8 +15,8 @@
 
   &--cross {
     background-image: url("../images/icons/cross.svg");
-    width: 13px;
+    width: $iconWidth;
     height: 13px;
-    margin: 6px 0 0 6px;
+    margin: 6px 0px;
   }
 }
