--- a/src/styles/blocks/form-field.scss
+++ b/src/styles/blocks/form-field.scss
@@ -3,35 +3,31 @@
   justify-content: space-between;
 
   &__bilets {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     box-sizing: border-box;
     height: 50px;
     width: 100%;
     transition: all 0.3s;
+    cursor: pointer;
+    border: 1px solid $colorGreen;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #0f0e08;
+    text-align: center;
 
     @include onTablet {
       height: 70px;
-    }
-
-    &::placeholder {
-      font-weight: 500;
-      font-size: 16px;
-      line-height: 100%;
-      color: #0f0e08;
-      text-align: center;
     }
 
     &:hover {
       outline: none;
       background-color: $colorGreen;
       border: 1px solid $colorGreen;
-      &::placeholder {
-        color: #fff;
-      }
-    }
-
-    &:focus {
-      outline: none;
-      border: 1px solid $colorGreen;
+      color: #fff;
     }
   }
 
