--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -15,8 +15,8 @@
 
   &--cross {
     background-image: url("../images/icons/cross.svg");
-    width: $iconWidth;
+    min-width: $iconWidth;
     height: 13px;
-    margin: 6px 0px;
+    margin: 6px 0;
   }
 }
