--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,17 +1,18 @@
 .menu {
+  box-sizing: border-box;
   background-color: $colorGreen;
   padding: 27px 0;
 
-  height: 399px;
+  height: $heightMobileMenu;
   width: 100%;
 
   @include onTablet {
-    height: 225px;
+    height: $heightTabletMenu;
     padding: 39px 0;
   }
 
   @include onNotebook {
-    height: 233px;
+    height: $heightNotebookMenu;
   }
 
   &__content {
