--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -5,3 +5,6 @@ $colorGreen: #1a5a4c;
 $colorDark: #0f0e08;
 $iconWidth: 18px;
 $logoWidth: 61px;
+$heightMobileMenu: 399px;
+$heightTabletMenu: 225px;
+$heightNotebookMenu: 233px;
