--- a/src/styles/blocks/form-field.scss
+++ b/src/styles/blocks/form-field.scss
@@ -95,6 +95,14 @@
     width: 100%;
     transition: all 0.3s;
 
+    font-family: $fontTitles;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 14px;
+    padding-left: 24px;
+    outline: transparent;
+    border: none;
+
     @include onTablet {
       height: 70px;
     }
