--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -6,6 +6,7 @@
     font-size: 16px;
     background: #fff;
     color: $colorDark;
+    scroll-behavior: smooth;
 
     &--with-menu {
       overflow: hidden;
