change bilets in header to a

--- a/src/styles/blocks/form-field.scss
+++ b/src/styles/blocks/form-field.scss
@@ -13,10 +13,12 @@
     cursor: pointer;
     border: 1px solid $colorGreen;
 
+    text-decoration: none;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 100%;
-    color: #0f0e08;
+    color: $colorDark;
     text-align: center;
 
     @include onTablet {
