slider for mobile was added

--- a/src/styles/blocks/anonce.scss
+++ b/src/styles/blocks/anonce.scss
@@ -61,6 +61,15 @@
       font-size: 28px;
       line-height: 100%;
       color: $colorBlack;
+      text-align: center;
+
+      @include onTablet {
+        text-align: left;
+      }
+      
+      @include onDesktop {
+        text-align: left;
+      }
     }
   }
 }
