--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -13,6 +13,7 @@
       @for $end from $start through 12 {
         &--desktop-#{$start}-#{$end} {
           @include onDesktop {
+            display: inline-grid;
             grid-column: #{$start} / #{$end + 1};
           }
         }
