--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 @import "./blocks/container.scss";
 @import "./blocks/top-actions.scss";
 @import "./blocks/list-nav.scss";
+@import "./blocks/slider.scss";
 
 @import "./blocks/page.scss";
 @import "./blocks/header.scss";
@@ -15,4 +16,6 @@
 @import "./blocks/schedule.scss";
 @import "./blocks/events.scss";
 @import "./blocks/anonce.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/subscribe.scss";
 @import "./blocks/footer.scss";
