SUBSCRIBE section for mobile was added

--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -24,4 +24,39 @@
 
     color: #fff;
   }
+
+  &__form {
+    position: relative;
+    padding-bottom: 88px;
+    
+    &--input {
+      border: 0;
+      height: 50px;
+      width: 100%;
+
+      &::placeholder {
+        padding-left: 24px;
+        font-family: "Montserrat", sans-serif;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 100%;
+        color: #687480;
+      }
+    }
+    
+    &--button {
+      position: absolute;
+      top: 0;
+      right: 0;
+      
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+      width: 50px;
+      height: 50px;
+
+      background-color: #f14a27;
+    }
+  }
 }
