--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -11,9 +11,14 @@
   background-image: url(../images/subscribe_bg.png);
 
   &__title {
+    text-align: center;
     padding: 88px 0 20px;
     margin: 0;
     color: #fff;
+
+    @include onDesktop {
+      padding-top: 163px;
+    }
   }
 
   &__text {
@@ -23,16 +28,32 @@
     padding-bottom: 50px;
 
     color: #fff;
+
+    @include onDesktop {
+      padding-bottom: 72px;
+    }
   }
 
   &__form {
     position: relative;
     padding-bottom: 88px;
+
+    @include onDesktop {
+      padding-bottom: 163px;
+    }
     
     &--input {
       border: 0;
       height: 50px;
       width: 100%;
+      
+      @include onTablet {
+        height: 70px;
+      }
+      
+      @include onDesktop {
+        height: 70px;
+      }
 
       &::placeholder {
         padding-left: 24px;
@@ -55,8 +76,18 @@
       
       width: 50px;
       height: 50px;
-
+      
       background-color: #f14a27;
+      
+      @include onTablet {
+        width: 70px;
+        height: 70px;
+      }
+      
+      @include onDesktop {
+        width: 70px;
+        height: 70px;
+      }
     }
   }
 }
