--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -43,6 +43,9 @@
     }
     
     &--input {
+      box-sizing: border-box;
+      padding-left: 24px;
+
       border: 0;
       height: 50px;
       width: 100%;
@@ -56,7 +59,6 @@
       }
 
       &::placeholder {
-        padding-left: 24px;
         font-family: "Montserrat", sans-serif;
         font-weight: 400;
         font-size: 14px;
