menu for tablet was fixed

--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -1,9 +1,13 @@
 .container {
   margin: 0 auto;
   max-width: 1170px;
-  padding: 9px 20px 0;
+  padding: 0 20px;
+
+  @include onTablet {
+    padding: 0 34px;
+  }
 
   @include onDesktop {
-    padding: 15px 55px 0;
+    padding: 0 34px;
   }
 }
