--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -7,15 +7,15 @@
   &__content {
     display: flex;
     flex-direction: column;
-    padding: 14px 0 27px;
+    padding: 27px 0;
 
     @include onTablet {
-      padding-bottom: 40px;
+      padding: 40px 0;
       flex-direction: row;
-      justify-content: space-between;
     }
-
+    
     @include onDesktop {
+      flex-direction: row;
       padding-bottom: 48px;
     }
   }
@@ -25,6 +25,7 @@
     margin-bottom: 24px;
 
     @include onTablet {
+      padding-right: 38px;
       border-right: 1px solid rgba(255, 255, 255, 0.5);
       border-bottom-color: transparent;
     }
@@ -32,15 +33,25 @@
     &--icon {
       position: absolute;
     }
+  }
 
-    &__schedule {
-      
+  .nav__schedule {
+    @include onTablet {
+      margin-left: 38px;
+    }
+    
+    &--wrap {
       @include onTablet {
         display: flex;
+        gap: 38px;
       }
     }
+
+    &--schedule {
+      flex-shrink: 0;
+    }
   }
-  
+
   &__list {
     margin-left: 45px;
   }
