--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,4 +1,5 @@
 .header {
+  padding-top: 9px;
   box-sizing: border-box;
   min-height: 300px;
   max-height: 655px;
@@ -7,6 +8,14 @@
   background-repeat: no-repeat;
   background-position: top right;
   background-image: url(../images/background.png);
+
+  @include onTablet {
+    padding-top: 15px;
+  }
+
+  @include onDesktop {
+    padding-top: 15px;
+  }
   
   &__title {
     padding: 250px 0 20px;
