--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -16,7 +16,7 @@
     
     @include onDesktop {
       flex-direction: row;
-      padding-bottom: 48px;
+      padding: 48px 0;
     }
   }
   
@@ -26,6 +26,12 @@
 
     @include onTablet {
       padding-right: 38px;
+      border-right: 1px solid rgba(255, 255, 255, 0.5);
+      border-bottom-color: transparent;
+    }
+
+    @include onDesktop {
+      padding-right: 102px;
       border-right: 1px solid rgba(255, 255, 255, 0.5);
       border-bottom-color: transparent;
     }
@@ -39,20 +45,43 @@
     @include onTablet {
       margin-left: 38px;
     }
+
+    @include onDesktop {
+      margin-left: 102px;
+    }
     
     &--wrap {
       @include onTablet {
         display: flex;
         gap: 38px;
       }
+
+      @include onDesktop {
+        display: flex;
+        gap: 30px;
+      }
     }
 
     &--schedule {
       flex-shrink: 0;
     }
+
+    &--descriptions {
+      @include onTablet {
+        max-width: 170px;
+      }
+
+      @include onDesktop {
+        max-width: 170px;
+      }
+    }
   }
 
   &__list {
     margin-left: 45px;
+
+    @include onDesktop {
+      margin-left: 108px;
+    }
   }
 }
