--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,23 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "./utils/mixins";
 
 @import "./blocks/page.scss";
+@import "./blocks/header.scss";
+@import "./blocks/icon.scss";
+@import "./blocks/logo.scss";
+
+[class*="__container"] {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 20px;
+
+  @include onTablet {
+    padding: 0 34px;
+  }
+
+  @include onDesctop {
+    padding: 0 55px;
+  }
+}
