--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "./blocks/header.scss";
 @import "./blocks/icon.scss";
 @import "./blocks/logo.scss";
+@import "./blocks/museum.scss";
 
 [class*="__container"] {
   max-width: 1170px;
