--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -6,6 +6,11 @@
       display: flex;
       gap: 40px;
     }
+
+    @include onDesktop {
+      display: flex;
+      gap: 135px;
+    }
   }
 
   &__social-media {
@@ -23,6 +28,23 @@
         display: flex;
       }
     }
+
+    @include onDesktop {
+      flex-direction: column;
+      justify-content: start;
+      gap: 62px;
+
+      &--icon {
+        display: flex;
+      }
+    }
+  }
+
+  &__wrap--info {
+    @include onDesktop {
+      display: flex;
+      max-width: 70%;
+    }
   }
 
   &__info {
@@ -33,6 +55,12 @@
     border-bottom: 1px solid rgba(26, 90, 76, 0.5);
 
     margin-bottom: 40px;
+
+    @include onDesktop {
+      padding-right: 65px;
+      border-right: 1px solid rgba(26, 90, 76, 0.5);
+      border-bottom-color: transparent;
+    }
   }
 
   &__contacts {
@@ -52,6 +80,10 @@
 
   &__nav {
     margin-bottom: 80px;
+
+    @include onDesktop {
+      padding-left: 65px;
+    }
   }
 
   &__copyright {
@@ -64,6 +96,11 @@
     text-align: center;
 
     @include onTablet {
+      display: flex;
+      justify-content: space-between;
+    }
+
+    @include onDesktop {
       display: flex;
       justify-content: space-between;
     }
