the layout was finished

--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -1,14 +1,27 @@
 .swiper {
   height: 410px;
 
+  @include onTablet {
+    height: 540px;
+  }
+  
+  @include onDesktop {
+    display: none;
+  }
+  
   &-slide {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-
+  
   &-slide--img {
     width: 100%;
+    
+    @include onTablet {
+      height: 100%;
+      object-fit: contain;
+    }
   }
 
   &-button-prev::after,
@@ -21,13 +34,5 @@
     &-active {
       background: #1a5a4c;
     }
-  }
-
-  @include onTablet {
-    display: none;
-  }
-
-  @include onDesktop {
-    display: none;
   }
 }
