--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -64,6 +64,7 @@
     max-width: 270px;
     position: relative;
     border: 1px solid $colorGreen;
+    cursor: pointer;
     
     font-weight: 500;
     font-size: 16px;
