some hover effects were added

--- a/src/styles/blocks/list-nav.scss
+++ b/src/styles/blocks/list-nav.scss
@@ -26,6 +26,8 @@
   }
   
   &__link {
+    position: relative;
+    display: inline-block;
     color: #fff;
     text-decoration: none;
     font-weight: 500;
@@ -36,8 +38,44 @@
       font-size: 22px;
     }
 
+    &::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      transform: scaleX(0);
+      height: 2px;
+      bottom: -4px;
+      left: 0;
+      background-color: #fff;
+      transform-origin: bottom right;
+      transition: transform 0.25s ease-out;
+    }
+
+    &:hover::after {
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
+
     &--footer {
       color: $colorBlack;
+
+      &::after {
+        content: "";
+        position: absolute;
+        width: 100%;
+        transform: scaleX(0);
+        height: 2px;
+        bottom: -4px;
+        left: 0;
+        background-color: #0f0e08;
+        transform-origin: bottom right;
+        transition: transform 0.25s ease-out;
+      }
+
+      &:hover::after {
+        transform: scaleX(1);
+        transform-origin: bottom left;
+      }
     }
   }
 }
