--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,7 @@
 @import "./blocks/grid.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/icon.scss";
+@import "./blocks/images.scss";
 @import "./blocks/container.scss";
 @import "./blocks/top-actions.scss";
 @import "./blocks/list-nav.scss";
