--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,6 +1,5 @@
 @font-face {
-  font-family: "Roboto";
-  src: url("../fonts/Roboto-Regular-webfont.woff") format("woff");
-  font-weight: normal;
-  font-style: normal;
+  font-family: "IBM Plex Sans", sans-serif;
+  src: url(https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&display=swa);
+  font-weight: 300;
 }
