--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
 @import "utils";
 @import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/reset";
+@import "./blocks/page";
+@import "./blocks/container";
+@import "./blocks/header";
+@import "./blocks/icon";
+@import "./blocks/grid";
+@import "./blocks/logo";
+@import "./blocks/button";
+@import "./blocks/menu";
+@import "./blocks/current-events";
+@import "./blocks/gallery";
+@import "./blocks/subscription";
+@import "./blocks/footer";
