--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -3,6 +3,14 @@
   scroll-behavior: smooth;
   font-weight: 400;
 
+  &__body {
+    margin: 0;
+
+    &--with-menu {
+      overflow: hidden;
+    }
+  }
+
   &__title {
     font-weight: 700;
     font-size: 45px;
