--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -86,7 +86,6 @@
     color: $color-main-text;
     margin-bottom: 10px;
 
-
     @include onTablet {
       font-size: 36px;
       margin-bottom: 15px;
@@ -167,7 +166,7 @@
     bottom: 0;
     transform: translateY(+50%);
     background-color: #fff;
-    box-shadow: 0px 2px 0px rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
     max-width: 570px;
     z-index: 1;
     padding: 24px 21px 20px;
