--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -7,7 +7,6 @@
   height: 100%;
   margin-bottom: 50px;
 
-
   &__place {
     padding: 88px 0;
     display: flex;
@@ -82,7 +81,7 @@
   &__button {
     width: 50px;
     height: 50px;
-    background-color: #F14A27;
+    background-color: #f14a27;
     border: none;
     background-image: url(../images/arrowwhite.svg);
     background-position: center;
