--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 @import "./blocks/icon.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/museum.scss";
+@import "./blocks/menu.scss";
 
 [class*="__container"] {
   max-width: 1170px;
