--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -8,6 +8,11 @@
 
     @include onTablet {
       display: flex;
+      padding: 39px 0 40px;
+    }
+
+    @include onDesctop {
+      padding: 42px 0 48px;
     }
   }
 
@@ -20,29 +25,35 @@
 
     @include onTablet {
       border-bottom: 0;
-      flex: 1 1 46%;
+      flex: 1 1 45%;
+      border-right: 0;
+    }
+
+    @include onDesctop {
+      flex: 1 1 50%;
+      column-gap: 107px;
     }
   }
 
   &__menu-icon {
     margin-top: 5px;
     width: 18px;
-    height: 13px;
+    height: 18px;
+
+    @include onTablet {
+      margin-top: 0;
+    }
   }
 
   &__list {
     margin: 0;
     padding: 0;
     list-style: none;
-    width: auto;
 
     display: flex;
     flex-wrap: wrap;
     row-gap: 24px;
-
-    @include onDesctopLarge {
-      width: 50%;
-    }
+    height: min-content;
   }
 
   &__item {
@@ -50,7 +61,7 @@
     box-sizing: border-box;
 
     &:nth-child(even) {
-      padding-left: 10px;
+      padding-left: 14px;
 
       @media(min-width: 372px) {
         padding-left: 0;
@@ -73,7 +84,21 @@
     color: #fff;
 
     @include onTablet {
-      flex: 1 1 54%;
+      flex: 1 1 55%;
+      padding-left: 20px;
+      border-left: 1px solid rgba(255, 255, 255, 0.5);
+
+      @media(min-width: 690px) {
+        padding-left: 38px;
+      }
+
+      @include onDesctop {
+        padding-left: 102px;
+      }
+    }
+
+    @include onDesctop {
+      flex: 1 1 50%;
     }
   }
 
@@ -87,6 +112,15 @@
 
     @include onTablet {
       display: flex;
+      column-gap: 12px;
+
+      @media(min-width: 690px) {
+        column-gap: 38px;
+      }
+    }
+
+    @include onDesctop {
+      column-gap: 40px;
     }
   }
 
@@ -94,9 +128,29 @@
     margin: 0;
     padding: 0;
     list-style: none;
+
+    @include onTablet {
+      width: 158px;
+    }
   }
 
   &__day-bold {
     font-weight: 600;
+  }
+
+  &__day-info {
+    margin: 0;
+
+    @include onTablet {
+      width: 134px;
+
+      @media(min-width: 690px) {
+        width: 144px;
+      }
+
+      @media(min-width: 800px) {
+        width: 170px;
+      }
+    }
   }
 }
