--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,3 +1,5 @@
+@import "../utils/mixins";
+
 .page {
   position: relative;
   font-family: "IBM Plex Sans", sans-serif;
@@ -32,11 +34,12 @@
     left: 0;
     right: 0;
     z-index: 5;
-    transform: translateX(-100%);
+    transform: translateY(-100%);
+    overflow-y: hidden;
     transition: transform 0.3s;
 
-    &:target {
-      transform: translateX(0);
+    &--open {
+      transform: translateY(0);
     }
   }
 }
