--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+$black: #0f0e08;
+$white: #fff;
+$green: #1a5a4c;
+$grey: #687480;
+$orange: #f14a27;
+$backgound: #fff;
+$menuBackgound: #e5e5e5;
+
+$duration: 0.3s;
