--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,12 @@
 @import "utils";
-@import "fonts";
-@import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "blocks/page";
+@import "blocks/grid";
+@import "blocks/container";
+@import "blocks/logo";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/events";
+@import "blocks/gallery";
+@import "blocks/subscribe";
+@import "blocks/footer";
