--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,38 @@
-%h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+%mon36px700 {
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 100%;
+  color: $black;
+}
+
+%ibm16px300 {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 150%;
+  color: $grey;
+}
+
+%menuPosition {
+  position: absolute;
+  top: 33px;
+  left: 20px;
+
+  @include onTablet {
+    top: 45px;
+    left: 39px;
+  }
+
+  @include onDesktop {
+    left: 58px;
+  }
+}
+
+%bacgroundPosition {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 }
