Created EVENTS section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,8 @@
 @import "./blocks/logo.scss";
 @import "./blocks/museum.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/events.scss";
+@import "./blocks/exhibition.scss";
 
 [class*="__container"] {
   max-width: 1170px;
