--- a/src/styles/blocks/museum.scss
+++ b/src/styles/blocks/museum.scss
@@ -5,10 +5,12 @@
   box-sizing: border-box;
 
   @include onTablet {
+    margin-bottom: 88px;
     height: 384px;
   }
 
   @include onDesctop {
+    margin-bottom: 200px;
     height: 100vh;
   }
 
