--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -41,6 +41,10 @@
   &__logo {
     height: min-content;
 
+    &:hover {
+      opacity: 0.6;
+    }
+
     @include onTablet {
       text-align: center;
       width: 220px;
@@ -90,6 +94,10 @@
 
       display: flex;
       text-decoration: none;
+
+      &:hover {
+        opacity: 0.6;
+      }
 
       @include onTablet {
         --height: 70px;
