--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -111,6 +111,10 @@
       margin: 0;
       background-color: $orange;
       border: none;
+
+      &:hover {
+        opacity: 0.6;
+      }
     }
   }
 }
