--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -18,6 +18,10 @@
   &__cross {
     @extend %menuPosition;
     z-index: 4;
+
+    &:hover {
+      opacity: 0.5;
+    }
   }
 
   &__container {
@@ -58,6 +62,10 @@
       &-events {
         @include onTablet {
           order: 1;
+        }
+
+        @include onDesktop {
+          width: 70%;
         }
       }
     }
@@ -133,5 +141,9 @@
     line-height: 100%;
     text-decoration: none;
     color: $white;
+
+    &:hover {
+      opacity: 0.5;
+    }
   }
 }
