--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,6 +1,8 @@
 .header {
   display: block;
   position: relative;
+  margin: 0 auto;
+  max-width: 1440px;
   padding-bottom: 70px;
 
   @include onTablet {
@@ -67,6 +69,10 @@
 
     @include onDesktop {
       margin-top: 206px;
+    }
+
+    @media (min-width: 1440px) {
+      padding: 0;
     }
 
     &-title {
@@ -157,6 +163,10 @@
         font-size: 14px;
         line-height: 100%;
         color: $grey;
+
+        @media (min-width: 1440px) {
+          left: -55px;
+        }
 
         &::before {
           content: "";
