--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -25,12 +25,14 @@
   }
 
   &__container {
+    max-width: none;
     background-color: $green;
   }
 
   &__list {
     position: relative;
     margin: 0 auto;
+    max-width: 1440px;
     list-style: none;
     padding: 27px 0;
 
