--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,4 +1,6 @@
 .subscribe {
+  max-width: 1440px;
+  margin: 0 auto;
   padding: 88px 0;
   background-image: url(../images/subscribe.jpg);
   @extend %bacgroundPosition;
