--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -123,6 +123,7 @@
   }
 
   &__lection {
+    max-width: 1440px;
     display: flex;
     align-items: end;
     justify-content: center;
@@ -138,7 +139,7 @@
 
     @include onDesktop {
       height: 550px;
-      margin: 0 0 300px;
+      margin: 0 auto 300px;
     }
 
     &--grid {
