transition added, cancel button position fixed

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -42,6 +42,7 @@
 
   &__logo {
     height: min-content;
+    transition: opacity $duration;
 
     &:hover {
       opacity: 0.6;
@@ -100,6 +101,7 @@
 
       display: flex;
       text-decoration: none;
+      transition: opacity $duration;
 
       &:hover {
         opacity: 0.6;
