--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -22,6 +22,10 @@
     &:hover {
       opacity: 0.5;
     }
+
+    @media (min-width: 1440px) {
+      left: calc((100vw - 1440px) / 2);
+    }
   }
 
   &__container {
@@ -59,7 +63,7 @@
     }
 
     &--gallery {
-      transform: translateX(45px);
+      transform: translateX(50px);
 
       &-events {
         @include onTablet {
@@ -76,7 +80,7 @@
       justify-self: center;
 
       @include onTablet {
-        transform: translateX(45px);
+        transform: translateX(50px);
       }
 
       @include onDesktop {
@@ -143,6 +147,8 @@
     line-height: 100%;
     text-decoration: none;
     color: $white;
+
+    transition: opacity $duration;
 
     &:hover {
       opacity: 0.5;
