--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -113,6 +113,7 @@
       margin: 0;
       background-color: $orange;
       border: none;
+      transition: opacity $duration;
 
       &:hover {
         opacity: 0.6;
