Created slider in Gallety section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
 @import "./blocks/menu.scss";
 @import "./blocks/events.scss";
 @import "./blocks/exhibition.scss";
+@import "./blocks/gallery.scss";
 
 [class*="__container"] {
   max-width: 1170px;
