--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -125,11 +125,12 @@
   }
 
   &__days {
-    margin: 0;
+    margin: 0 0 16px;
     padding: 0;
     list-style: none;
 
     @include onTablet {
+      margin: 0;
       width: 158px;
     }
   }
