--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -18,6 +18,7 @@
   &__cross {
     @extend %menuPosition;
     z-index: 4;
+    transition: opacity $duration;
 
     &:hover {
       opacity: 0.5;
