--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -78,11 +78,11 @@
       box-sizing: border-box;
       margin: 0;
       @extend %ibm16px300;
-      font-weight: 500;
+      font-weight: 400;
       color: $black;
       text-align: center;
-      text-transform: uppercase;
       padding-left: 24px;
+      outline: none;
 
       &::placeholder {
         font-family: "Montserrat", sans-serif;
