--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 @import "./blocks/events.scss";
 @import "./blocks/exhibition.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/subscription.scss";
 
 [class*="__container"] {
   max-width: 1170px;
