namu slaider problem

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,15 @@
 @import "utils";
-@import "fonts";
 @import "typography";
 
-body {
-  background: $c-gray;
-}
+@import "./blocks/grid";
+@import "./blocks/button";
+@import "./blocks/container";
+@import "./blocks/header";
+@import "./blocks/logo";
+@import "./blocks/menu";
+@import "./blocks/page";
+@import "./blocks/actual";
+@import "./blocks/card";
+@import "./blocks/from-to";
+@import "./blocks/gallery";
+@import "./blocks/slider";
