--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,44 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+  color: #000;
+
+  @include onTablet {
+    font-size: 54px;
+  }
+
+  @include onDesktop {
+    font-size: 72px;
+  }
+}
+
+%h2 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 36px;
+  color: $Tblack;
+
+  @include onTablet {
+    font-size: 48px;
+  }
+}
+
+%h3 {
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
+  font-size: 28px;
+  color: $Tblack;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+}
+
+%p {
+  font-family: "IBM Plex Sans Devanagari", sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 150%;
+  color: $Pgrey;
 }
