--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -24,7 +24,15 @@
   }
 
   &__logo {
-    margin-bottom: 66px;
+    margin-bottom: 40px;
+    
+    @include onDesktop {
+      margin-bottom: 66px;
+    }
+    
+    @include onTablet {
+      margin-bottom: 62px;
+    }
   }
 
   &__social {
@@ -113,6 +121,13 @@
       font-weight: 400;
       font-size: 14px;
       line-height: 100%;
+
+      @include onDesktop {
+        &:hover {
+          transition: 0.2s;
+          color: #f14a27;
+        }
+      }
     }
   }
 
@@ -126,6 +141,13 @@
 
       text-decoration: none;
       color: #0f0e08;
+      
+      @include onDesktop {
+        &:hover {
+          transition: 0.2s;
+          color: #f14a27;
+        }
+      }
     }
   }
 
