--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -80,7 +80,7 @@
       line-height: 120%;
       text-align: left;
     
-      margin-bottom: 40px;
+      margin-bottom: 38px;
     }
 
     @include onDesktop {
@@ -142,9 +142,11 @@
   margin-bottom: 70px;
 
   @include onTablet {
-    margin-bottom: 107px;
+    margin-bottom: 0;
   }
-
+  @include onDesktop {
+    margin-bottom: 0;
+  }
   &--container {
     margin: 0 auto;
 
@@ -163,7 +165,6 @@
     @include onTablet {
       margin: 0;
       height: 70px;
-      margin-bottom: 104px;
     }
   }
  
