--- a/src/styles/blocks/lecture.scss
+++ b/src/styles/blocks/lecture.scss
@@ -32,8 +32,9 @@
       text-align: left;
 
       top: -100px;
-      
-      padding: 45px 50px;
+
+      margin: 0 65px;
+      padding: 45px 55px;
       margin-bottom: -100px;
     }
   
@@ -62,8 +63,16 @@
 
     &-header {
       font-weight: 400;
-      font-size: 36px;
+      font-size: 28px;
       line-height: 100%;
+
+      @include onTablet {
+        font-size: 36px;
+      }
+
+      @include onDesktop {
+        font-size: 36px;
+      }
     }
   }
 }
