--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -6,6 +6,14 @@
   &__about {
     display: flex;
     gap: 34px;
+
+    @include onTablet {
+      gap: 44px;
+    }
+
+    @include onDesktop {
+      gap: 107px;
+    }
   }
    
   &__container {
@@ -45,14 +53,6 @@
     background-position: center;
 
     cursor: pointer;
-
-    @include onTablet {
-      margin-right: 44px;
-    }
-
-    @include onDesktop {
-      margin-right: 106px;
-    }
   }
 
   &__item {
@@ -125,7 +125,7 @@
       @include onDesktop {
         flex-direction: row;
         justify-content: space-between;
-        gap: 30px;
+        gap: 40px;
       }
 
       @include onTablet {
@@ -138,17 +138,21 @@
     &--text {
       font-family: "IBM Plex Sans", sans-serif;
       
-      font-weight: 400;
+      font-weight: 600;
       font-size: 14px;
-      line-height: 140.62%;
+      line-height: 150%;
             
       color: #fff;
 
       margin-bottom: 20px;
+      max-width: 280px;
+
+      @include onDesktop {
+        max-width: 170px;
+      }
 
       @include onTablet {
-        font-weight: 600;
-        line-height: 150%;
+        max-width: 144px;
       }
     }
   }
