--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -29,14 +29,25 @@
   }
 
   &__title {
-    font-style: normal;
     font-weight: 700;
-    font-size: 48px;
+    font-size: 36px;
     line-height: 100%;
-        
+
     color: #fff;
 
-    margin-bottom: 16px;
+    margin-bottom: 20px;
+
+    @include onTablet {
+      font-size: 48px;
+
+      margin-bottom: 16px;
+    }
+
+    @include onDesktop {
+      font-size: 48px;
+
+      margin-bottom: 16px;
+    }
   }
 
   &__text {
@@ -50,6 +61,11 @@
     color: #fff;
     margin-bottom: 50px;
 
+    @include onTablet {
+      line-height: 100%;
+      margin-bottom: 64px;
+    }
+
     @include onDesktop {
       line-height: 100%;
       margin-bottom: 72px;
@@ -60,7 +76,7 @@
     display: flex;
     justify-content: center;
 
-    @include onDesktop {
+    @include onTablet {
       gap: 16px;
     }
 
