--- a/src/styles/blocks/navigation.scss
+++ b/src/styles/blocks/navigation.scss
@@ -1,7 +1,10 @@
 .nav {
   position: absolute;
   z-index: 1;
-  background-color: #1a5a4c;
+
+  &__green {
+    background-color: #1a5a4c;
+  }
 
   &__about {
     display: flex;
@@ -124,13 +127,11 @@
 
       @include onDesktop {
         flex-direction: row;
-        justify-content: space-between;
-        gap: 40px;
+        gap: 60px;
       }
 
       @include onTablet {
         flex-direction: row;
-        justify-content: space-between;
         gap: 30px;
       }
     }
