--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,8 +29,11 @@
     top: 0;
     left: 0;
     right: 0;
+    height: 100%;
     transform: translateY(-100%);
     transition: transform 0.3s;
+
+    background-color: rgba(0, 0, 0, 0.9);
 
     &:target {
       transform: translateY(0);
