Created CONTACTS section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,7 +12,9 @@
 @import "./blocks/events.scss";
 @import "./blocks/exhibition.scss";
 @import "./blocks/gallery.scss";
+@import "./blocks/slider.scss";
 @import "./blocks/subscription.scss";
+@import "./blocks/contacts.scss";
 
 [class*="__container"] {
   max-width: 1170px;
