--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -86,6 +86,7 @@
     font-size: 14px;
     color: #687480;
     transform: rotate(-90deg);
+    text-decoration: none;
 
     @include onDesktop {
       display: block;
