--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -121,6 +121,12 @@
       margin-top: 20px;
       width: fit-content;
     }
+
+    &--contacts {
+      &:hover {
+        border-bottom: 1px solid #000;
+      }
+    }
   }
 
   &__schedule {
