--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,17 +1,28 @@
 .button {
   width: 100%;
-  height: 50px;
   border: 1px solid $color-green;
   background-color: #fff;
   position: relative;
+  text-align: center;
+  align-self: center;
+
+  @extend %p;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 50px;
+  text-decoration: none;
+  color: $color-main-text;
+
+  @include hover(translate, 10%);
 
   @include onTablet {
-    height: 70px;
+    line-height: 70px;
     width: 270px;
   }
 
   @include onDesktop {
-    align-self: center;
+    padding-right: 67px;
   }
 
   &::after {
@@ -29,19 +40,6 @@
 
     @include onTablet {
       width: 70px;
-    }
-  }
-
-  &__link {
-    @extend %p;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 16px;
-    text-decoration: none;
-    color: $color-main-text;
-
-    @include onTablet {
-      padding-right: 67px;
     }
   }
 }
