--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -69,7 +69,7 @@
     border-radius: 50%;
     justify-self: end;
     margin-bottom: 20px;
-    @include hover(border-color, $c-red);
+    @include hover(border-color, $c-orange);
     @include hover(background-image, url(../images/arrow-up.svg));
 
     @include onTablet {
