--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -20,14 +20,14 @@
     background-image: url(../images/Facebook.svg);
     width: 12px;
     height: 24px;
-    @include hover(fill, $c-red);
+    @include hover(fill, $c-orange);
   }
 
   &--instagram {
     background-image: url(../images/instagram.svg);
     width: 24px;
     height: 24px;
-    @include hover(fill, $c-red);
+    @include hover(fill, $c-orange);
   }
 
 }
