--- a/src/styles/blocks/_subscription.scss
+++ b/src/styles/blocks/_subscription.scss
@@ -81,7 +81,7 @@
   }
 
   &__button {
-    background-color: $c-red;
+    background-color: $c-orange;
     border: none;
     cursor: pointer;
     @include hover(background-color, $c-green);
