--- a/src/styles/blocks/_tickets.scss
+++ b/src/styles/blocks/_tickets.scss
@@ -28,10 +28,11 @@
 
   &__button {
     background-color: $c-green;
-    @include hover(background-color, $c-red);
+    @include hover(background-color, $c-orange);
 
     &:hover + .tickets__name {
-      border-color: $c-red;
+      border-color: $c-orange;
+
     }
   }
 }
