--- a/src/styles/blocks/_developments.scss
+++ b/src/styles/blocks/_developments.scss
@@ -65,7 +65,7 @@
       display: inline-block;
       height: 10px;
       width: 10px;
-      background-color: $c-red;
+      background-color: $c-orange;
       transform: translateY(-20%);
     }
   }
