--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,6 +15,7 @@
 @import "./blocks/slider.scss";
 @import "./blocks/subscription.scss";
 @import "./blocks/contacts.scss";
+@import "./blocks/footer.scss";
 
 [class*="__container"] {
   max-width: 1170px;
